# Capstone_Project_Agentic_Ai_RAG

./: .gitignore  ARCHITECTURE.md  BUG_FIXES.md  BUG_FIXES_AND_NEW_IMPLEMENTIONS.md  README.md  SETUP.md  pyproject.toml
app/agents/: rag_flow.py  rfp_flow.py  tool_flow.py
app/core/: config.py  llm.py  logger.py
app/db/: database.db  db.py  init_db.py  repository.py  seed_db.py
app/graph/: export_mermaid.py  graph.py  nodes.py  router.py  state.py
app/prompts/: prompt_loader.py  prompts.json
app/rag/: build_index.py  loaders.py  retriever.py
app/rag/faiss_index/: index.faiss  index.pkl
app/schemas/: models.py
app/tools/: local_tools.py
app/ui/: streamlit_app.py
docs/: graph_flow.mmd
